Fix for Dark Mode Text

--- a/static/css/Defaultv2/Defaultv2-Dark.css
+++ b/static/css/Defaultv2/Defaultv2-Dark.css
@@ -115,6 +115,7 @@ body {
     width:100%;
     margin-top:10px;
     font-size:1.15em;
+    color: white;
 }
 
 .card-data img {
